<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".films_picker.FilmPickerActivity">

    <TextView
        android:id="@+id/moviePickerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/movie_picker_title" />

    <TextView
        android:id="@+id/chooseFriendsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_friends" />

    <Button
        android:id="@+id/chooseFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_friends_button" />

    <EditText
        android:id="@+id/filmPreferences"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/film_preferences_hint"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pickFilms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:text="@string/pick_films_button" />

        <Button
            android:id="@+id/pickerMainGoBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picker_main_go_back" />
    </LinearLayout>

</LinearLayout>