<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/filmPageGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/film_page_go_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/filmPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/filmName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="32dp" />

                <TextView
                    android:id="@+id/filmYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/filmRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/kinopoiskLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/film_on_kinopoisk" />

        <Button
            android:id="@+id/leaveReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_review" />

        <Button
            android:id="@+id/manageFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorites" />

        <TextView
            android:id="@+id/desctiptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/film_description_title"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/filmDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</ScrollView>